Net3 model added <200k

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -194,7 +194,7 @@
     }
    ],
    "source": [
-    "from torchsummary import summary\n",
+    "\n",
     "model = Net1()\n",
     "summary(model, input_size=(3, 32, 32))"
    ]
@@ -388,6 +388,403 @@
     "model = CIFAR10Model()\n",
     "summary(model, input_size=(3, 32, 32))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class Net2(nn.Module):\n",
+    "    def __init__(self,dropout_value = 0.1):\n",
+    "        \n",
+    "        super(Net2,self).__init__()\n",
+    "\n",
+    "        self.dropout_value = dropout_value\n",
+    "\n",
+    "        self.convblock1 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=3, out_channels=16,\n",
+    "                      kernel_size=(3, 3), padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(16),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) \n",
+    "        #output - 32\n",
+    "\n",
+    "        self.convblock2 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=16, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output  - 32\n",
+    "\n",
+    "        self.convblock3 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=32, out_channels=16,\n",
+    "                      kernel_size=(3, 3), padding=1,stride = 2,  bias=False),\n",
+    "            nn.BatchNorm2d(16),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) #output = 16\n",
+    "\n",
+    "        self.depthwise4 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=16, out_channels=16,\n",
+    "                      kernel_size=(3, 3), padding=1, groups=16, bias=False),\n",
+    "            nn.BatchNorm2d(16),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) #output = 16\n",
+    "\n",
+    "        self.pointwise4 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=16, out_channels=32,\n",
+    "                      kernel_size=(1, 1), bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) #output = 16\n",
+    "\n",
+    "        self.convblock5 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 32, out_channels=64,\n",
+    "                      kernel_size=(3, 3), padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 16\n",
+    "        self.convblock6 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 64, out_channels=16,\n",
+    "                      kernel_size=(3, 3), padding=1,stride = 2, bias=False),\n",
+    "            nn.BatchNorm2d(16),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 8\n",
+    "\n",
+    "        self.dilation7 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 16, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1,dilation=2, bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 6\n",
+    "\n",
+    "        self.convblock8 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 32, out_channels=64,\n",
+    "                      kernel_size=(3, 3), bias=False),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 4\n",
+    "\n",
+    "        self.gap = nn.Sequential(\n",
+    "            nn.AvgPool2d(kernel_size=4)\n",
+    "            )# output size = 1 rf=34\n",
+    "        \n",
+    "        self.fc1 = nn.Linear(in_features=64,out_features=128)\n",
+    "        self.fc2 = nn.Linear(in_features=128,out_features=128)\n",
+    "        self.fc3 = nn.Linear(in_features=128,out_features=10)\n",
+    "\n",
+    "    def forward(self,x):\n",
+    "\n",
+    "        x = self.convblock1(x)\n",
+    "        x = self.convblock2(x)\n",
+    "\n",
+    "        x = self.convblock3(x)\n",
+    "        \n",
+    "        x = self.depthwise4(x)\n",
+    "        x = self.pointwise4(x)\n",
+    "        x = self.convblock5(x)\n",
+    "\n",
+    "        x = self.convblock6(x)\n",
+    "        \n",
+    "        x = self.dilation7(x)\n",
+    "        x = self.convblock8(x)\n",
+    "\n",
+    "        x = self.gap(x)\n",
+    "\n",
+    "        x = x.view(-1,64)\n",
+    "        \n",
+    "        x = self.fc1(x)\n",
+    "        x = self.fc2(x)\n",
+    "        x = self.fc3(x)\n",
+    "        \n",
+    "        x = x.view(-1, 10)\n",
+    "        \n",
+    "        return F.log_softmax(x, dim=-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 16, 32, 32]             432\n",
+      "       BatchNorm2d-2           [-1, 16, 32, 32]              32\n",
+      "              ReLU-3           [-1, 16, 32, 32]               0\n",
+      "           Dropout-4           [-1, 16, 32, 32]               0\n",
+      "            Conv2d-5           [-1, 32, 32, 32]           4,608\n",
+      "       BatchNorm2d-6           [-1, 32, 32, 32]              64\n",
+      "              ReLU-7           [-1, 32, 32, 32]               0\n",
+      "           Dropout-8           [-1, 32, 32, 32]               0\n",
+      "            Conv2d-9           [-1, 16, 16, 16]           4,608\n",
+      "      BatchNorm2d-10           [-1, 16, 16, 16]              32\n",
+      "             ReLU-11           [-1, 16, 16, 16]               0\n",
+      "          Dropout-12           [-1, 16, 16, 16]               0\n",
+      "           Conv2d-13           [-1, 16, 16, 16]             144\n",
+      "      BatchNorm2d-14           [-1, 16, 16, 16]              32\n",
+      "             ReLU-15           [-1, 16, 16, 16]               0\n",
+      "          Dropout-16           [-1, 16, 16, 16]               0\n",
+      "           Conv2d-17           [-1, 32, 16, 16]             512\n",
+      "      BatchNorm2d-18           [-1, 32, 16, 16]              64\n",
+      "             ReLU-19           [-1, 32, 16, 16]               0\n",
+      "          Dropout-20           [-1, 32, 16, 16]               0\n",
+      "           Conv2d-21           [-1, 64, 16, 16]          18,432\n",
+      "      BatchNorm2d-22           [-1, 64, 16, 16]             128\n",
+      "             ReLU-23           [-1, 64, 16, 16]               0\n",
+      "          Dropout-24           [-1, 64, 16, 16]               0\n",
+      "           Conv2d-25             [-1, 16, 8, 8]           9,216\n",
+      "      BatchNorm2d-26             [-1, 16, 8, 8]              32\n",
+      "             ReLU-27             [-1, 16, 8, 8]               0\n",
+      "          Dropout-28             [-1, 16, 8, 8]               0\n",
+      "           Conv2d-29             [-1, 32, 6, 6]           4,608\n",
+      "      BatchNorm2d-30             [-1, 32, 6, 6]              64\n",
+      "             ReLU-31             [-1, 32, 6, 6]               0\n",
+      "          Dropout-32             [-1, 32, 6, 6]               0\n",
+      "           Conv2d-33             [-1, 64, 4, 4]          18,432\n",
+      "      BatchNorm2d-34             [-1, 64, 4, 4]             128\n",
+      "             ReLU-35             [-1, 64, 4, 4]               0\n",
+      "          Dropout-36             [-1, 64, 4, 4]               0\n",
+      "        AvgPool2d-37             [-1, 64, 1, 1]               0\n",
+      "           Linear-38                  [-1, 128]           8,320\n",
+      "           Linear-39                  [-1, 128]          16,512\n",
+      "           Linear-40                   [-1, 10]           1,290\n",
+      "================================================================\n",
+      "Total params: 87,690\n",
+      "Trainable params: 87,690\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 2.60\n",
+      "Params size (MB): 0.33\n",
+      "Estimated Total Size (MB): 2.95\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torchsummary import summary\n",
+    "model = Net2()\n",
+    "summary(model, input_size=(3, 32, 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 32, 32, 32]             864\n",
+      "       BatchNorm2d-2           [-1, 32, 32, 32]              64\n",
+      "              ReLU-3           [-1, 32, 32, 32]               0\n",
+      "           Dropout-4           [-1, 32, 32, 32]               0\n",
+      "            Conv2d-5           [-1, 64, 30, 30]          18,432\n",
+      "       BatchNorm2d-6           [-1, 64, 30, 30]             128\n",
+      "              ReLU-7           [-1, 64, 30, 30]               0\n",
+      "           Dropout-8           [-1, 64, 30, 30]               0\n",
+      "            Conv2d-9           [-1, 32, 15, 15]          18,432\n",
+      "      BatchNorm2d-10           [-1, 32, 15, 15]              64\n",
+      "             ReLU-11           [-1, 32, 15, 15]               0\n",
+      "          Dropout-12           [-1, 32, 15, 15]               0\n",
+      "           Conv2d-13           [-1, 32, 15, 15]             288\n",
+      "      BatchNorm2d-14           [-1, 32, 15, 15]              64\n",
+      "             ReLU-15           [-1, 32, 15, 15]               0\n",
+      "          Dropout-16           [-1, 32, 15, 15]               0\n",
+      "           Conv2d-17           [-1, 64, 15, 15]           2,048\n",
+      "      BatchNorm2d-18           [-1, 64, 15, 15]             128\n",
+      "             ReLU-19           [-1, 64, 15, 15]               0\n",
+      "          Dropout-20           [-1, 64, 15, 15]               0\n",
+      "           Conv2d-21           [-1, 64, 15, 15]          36,864\n",
+      "      BatchNorm2d-22           [-1, 64, 15, 15]             128\n",
+      "             ReLU-23           [-1, 64, 15, 15]               0\n",
+      "          Dropout-24           [-1, 64, 15, 15]               0\n",
+      "           Conv2d-25             [-1, 32, 8, 8]          18,432\n",
+      "      BatchNorm2d-26             [-1, 32, 8, 8]              64\n",
+      "             ReLU-27             [-1, 32, 8, 8]               0\n",
+      "          Dropout-28             [-1, 32, 8, 8]               0\n",
+      "           Conv2d-29             [-1, 64, 6, 6]          18,432\n",
+      "      BatchNorm2d-30             [-1, 64, 6, 6]             128\n",
+      "             ReLU-31             [-1, 64, 6, 6]               0\n",
+      "          Dropout-32             [-1, 64, 6, 6]               0\n",
+      "           Conv2d-33            [-1, 128, 4, 4]          73,728\n",
+      "      BatchNorm2d-34            [-1, 128, 4, 4]             256\n",
+      "             ReLU-35            [-1, 128, 4, 4]               0\n",
+      "          Dropout-36            [-1, 128, 4, 4]               0\n",
+      "        AvgPool2d-37            [-1, 128, 1, 1]               0\n",
+      "           Linear-38                   [-1, 64]           8,256\n",
+      "           Linear-39                   [-1, 10]             650\n",
+      "================================================================\n",
+      "Total params: 197,450\n",
+      "Trainable params: 197,450\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 4.27\n",
+      "Params size (MB): 0.75\n",
+      "Estimated Total Size (MB): 5.04\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Net3(nn.Module):\n",
+    "    def __init__(self,dropout_value = 0.1):\n",
+    "        \n",
+    "        super(Net3,self).__init__()\n",
+    "\n",
+    "        self.dropout_value = dropout_value\n",
+    "\n",
+    "        self.convblock1 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=3, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) \n",
+    "        #output - 32\n",
+    "\n",
+    "        self.convblock2 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=32, out_channels=64,\n",
+    "                      kernel_size=(3, 3), padding=1,dilation = 2, bias=False),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output  - 30\n",
+    "\n",
+    "        self.convblock3 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=64, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1,stride = 2,  bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) #output = 15\n",
+    "\n",
+    "        self.depthwise4 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=32, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1, groups=32, bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) #output = 15\n",
+    "\n",
+    "        self.pointwise4 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=32, out_channels=64,\n",
+    "                      kernel_size=(1, 1), bias=False),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) #output = 15\n",
+    "\n",
+    "        self.convblock5 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 64, out_channels=64,\n",
+    "                      kernel_size=(3, 3), padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 15\n",
+    "        self.convblock6 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 64, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1,stride = 2, bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 8\n",
+    "\n",
+    "        self.dilation7 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 32, out_channels=64,\n",
+    "                      kernel_size=(3, 3), padding=0, bias=False),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 6\n",
+    "\n",
+    "        self.convblock8 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 64, out_channels=128,\n",
+    "                      kernel_size=(3, 3), bias=False),\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 4\n",
+    "\n",
+    "        self.gap = nn.Sequential(\n",
+    "            nn.AvgPool2d(kernel_size=4)\n",
+    "            )# output size = 1 rf=34\n",
+    "        \n",
+    "        self.fc1 = nn.Linear(in_features=128,out_features=64)\n",
+    "        self.fc2 = nn.Linear(in_features=64,out_features=10)\n",
+    "        #self.fc3 = nn.Linear(in_features=128,out_features=10\n",
+    "\n",
+    "    def forward(self,x):\n",
+    "\n",
+    "        x = self.convblock1(x)\n",
+    "        x = self.convblock2(x)\n",
+    "\n",
+    "        x = self.convblock3(x)\n",
+    "        \n",
+    "        x = self.depthwise4(x)\n",
+    "        x = self.pointwise4(x)\n",
+    "        x = self.convblock5(x)\n",
+    "\n",
+    "        x = self.convblock6(x)\n",
+    "        \n",
+    "        x = self.dilation7(x)\n",
+    "        x = self.convblock8(x)\n",
+    "\n",
+    "        x = self.gap(x)\n",
+    "\n",
+    "        x = x.view(-1,128)\n",
+    "        \n",
+    "        x = self.fc1(x)\n",
+    "        x = self.fc2(x)\n",
+    "        #x = self.fc3(x)\n",
+    "        \n",
+    "        x = x.view(-1, 10)\n",
+    "        \n",
+    "        return F.log_softmax(x, dim=-1)\n",
+    "\n",
+    "\n",
+    "model = Net3()\n",
+    "summary(model, input_size=(3, 32, 32))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
