--- a/testing.ipynb
+++ b/testing.ipynb
@@ -784,7 +784,119 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Net4(nn.Module):\n",
+    "    def __init__(self,dropout_value = 0.02):\n",
+    "        \n",
+    "        super(Net4,self).__init__()\n",
+    "\n",
+    "        self.dropout_value = dropout_value\n",
+    "\n",
+    "        self.convblock1 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=3, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) \n",
+    "        #output - 32\n",
+    "\n",
+    "        self.convblock2 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=32, out_channels=64,  \n",
+    "                      kernel_size=(3, 3), padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output  - 30\n",
+    "\n",
+    "        self.convblock3 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=64, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1,stride = 2,  bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) #output = 15\n",
+    "\n",
+    "        self.convblock4 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=32, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        ) #output = 15\n",
+    "\n",
+    "        self.convblock5 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 64, out_channels=64,\n",
+    "                      kernel_size=(3, 3), padding=1, bias=False),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 15\n",
+    "        self.convblock6 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 64, out_channels=32,\n",
+    "                      kernel_size=(3, 3), padding=1,stride = 2, bias=False),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 8\n",
+    "\n",
+    "        self.dilation7 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 32, out_channels=64,\n",
+    "                      kernel_size=(3, 3), padding=0,dilation = 2, bias=False),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.dropout_value)\n",
+    "        )\n",
+    "        #output = 6\n",
+    "\n",
+    "        self.depthwise8 = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels = 64, out_channels = 64,\n",
+    "                      kernel_size=(3, 3),groups=64, bias=False),\n",
+    "            nn.Conv2d(in_channels = 64, out_channels = 128,\n",
+    "                      kernel_size=(1, 1), bias=False),\n",
+    "            nn.BatchNorm2d(128),\n",
+    "            nn.ReLU(),\n",
+    "        )\n",
+    "        #output = 4\n",
+    "\n",
+    "        self.gap = nn.Sequential(\n",
+    "            nn.AvgPool2d(kernel_size=4)\n",
+    "            )# output size = 1 rf=34\n",
+    "        \n",
+    "        self.fc1 = nn.Linear(in_features=128,out_features=64)\n",
+    "        self.fc2 = nn.Linear(in_features=64,out_features=10)\n",
+    "        #self.fc3 = nn.Linear(in_features=128,out_features=10\n",
+    "\n",
+    "    def forward(self,x):\n",
+    "\n",
+    "        x = self.convblock1(x)\n",
+    "        x = self.convblock2(x)\n",
+    "\n",
+    "        x = self.convblock3(x)\n",
+    "        \n",
+    "        x = self.convblock4(x)\n",
+    "        x = self.convblock5(x)\n",
+    "\n",
+    "        x = self.convblock6(x)\n",
+    "        \n",
+    "        x = self.dilation7(x)\n",
+    "        x = self.depthwise8(x)\n",
+    "\n",
+    "        x = self.gap(x)\n",
+    "\n",
+    "        x = x.view(-1,128)\n",
+    "        \n",
+    "        x = self.fc1(x)\n",
+    "        x = self.fc2(x)\n",
+    "        #x = self.fc3(x)\n",
+    "        \n",
+    "        x = x.view(-1, 10)\n",
+    "        \n",
+    "        return F.log_softmax(x, dim=-1)\n"
+   ]
   }
  ],
  "metadata": {
